--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
+    "firebase": "^9.14.0",
     "mongoose": "^6.7.5",
     "nodemon": "^2.0.16",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-google-button": "^0.7.2",
     "react-redux": "^v8.0.1",
     "react-router-dom": "^6.3.0",
     "webpack": "^5.72.0",
