--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@react-oauth/google": "^0.5.1",
     "@reduxjs/toolkit": "^1.8.1",
     "axios": "^0.27.2",
     "chalk": "^4.1.2",
