--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/local-auth": "^2.1.1",
     "@react-oauth/google": "^0.5.1",
     "@reduxjs/toolkit": "^1.8.1",
     "axios": "^0.27.2",
@@ -20,7 +21,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
-    "firebase": "^9.14.0",
+    "jwt-decode": "^3.1.2",
     "mongoose": "^6.7.5",
     "nodemon": "^2.0.16",
     "react": "^18.1.0",
@@ -37,6 +38,7 @@
     "@babel/preset-react": "7.16.7",
     "@babel/preset-stage-2": "^7.8.3",
     "babel-loader": "8.2.5",
+    "path-browserify": "^1.0.1",
     "volleyball": "^1.5.1",
     "webpack": "^5.72.0",
     "webpack-dev-server": "^4.7.3"
